@@ -234,6 +234,18 @@ NumPad ENTER<br>
       <td style="vertical-align: top; text-align: center;">Page Up<br>
       </td>
     </tr>
+    <tr>
+      <td style="vertical-align: top; text-align: center;">HOME<br>
+      </td>
+      <td style="vertical-align: top; text-align: center;">Home<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
   </tbody>
 </table>
 <br>
